--- a/package.json
+++ b/package.json
@@ -3,36 +3,33 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "docker:build": "docker build -t nextjs-docker .",
-    "docker:run": "docker run -p 3000:3000 nextjs-docker"
+    "start": "next start"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "autoprefixer": "10.4.17",
-    "class-variance-authority": "^0.7.0",
+    "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "geist": "^1.2.1",
-    "lucide-react": "^0.436.0",
+    "lucide-react": "^0.468.0",
     "next": "latest",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.3",
     "prettier": "^3.3.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@types/node": "20.10.6",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
-    "postcss": "8.4.33",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss": "3.4.1",
+    "@types/node": "22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "19.0.2",
+    "postcss": "8.4.49",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3"
+    "typescript": "5.7.2"
   }
 }
